# social_github

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  api-docs.md  cgt.py  chat_client.html  codex.md  delete_pycache.py  description.md  docker-compose.monitoring.yml  docker-compose.prod.yaml  docker-compose.yaml  front_promt.md  openapi.json  plan.md  promt.md  pyproject.toml  sfgs.md  sla.md  t.md  upload.html
app/: consumers.py  init_data.py  main.py  pre_start.py  tasks.py
app/analytics/: config.py  providers.py  service.py
app/analytics/consumers/: analytics.py
app/auth/: config.py  deps.py  exceptions.py  gateway.py  providers.py  routers.py  tasks.py
app/auth/dtos/: permissions.py  role.py  sessions.py  tokens.py  user.py
app/auth/emails/: templates.py
app/auth/filters/: permissions.py  roles.py  sessions.py  users.py
app/auth/models/: oauth.py  permission.py  role.py  role_permission.py  session.py  user.py
app/auth/repositories/: oauth.py  permission.py  role.py  session.py  user.py
app/auth/schemas/: base.py
app/auth/services/: cookie_manager.py  device.py  hash.py  jwt.py  oauth_manager.py  oauth_providers.py  rbac.py  session.py
app/chats/: config.py  delivery_app.py  exceptions.py  keys.py  providers.py  routers.py  tasks.py
app/chats/dtos/: attachments.py  calls.py  chats.py  delivery.py  livekit.py  members.py  messages.py  websocket.py
app/chats/events/: published.py
app/chats/models/: attachment.py  chat.py  chat_members.py  chat_roles.py  message.py  permission.py  permissions.py  read_receipts.py
app/chats/repositories/: attachment.py  chat.py  chat_members.py  chats.py  message.py  messages.py  read_receipts.py  reads.py
app/chats/routes/: livekit_webhook.py
app/chats/schemas/: rest.py  ws.py
app/chats/services/: access.py  attachment_service.py  delivery.py  delivery_router.py  livekit_service.py  permissions.py  presence.py  slow_mode.py  system_message.py  ws.py  ws_client_events.py
app/chats/tasks/: __init__.py  read.py  success_attachment.py
app/core/: commands.py  dtos.py  exceptions.py  models.py  queries.py  routers.py  tasks.py  utils.py
app/core/api/: builder.py  filter_mapper.py  rate_limiter.py  schemas.py
app/core/configs/: app.py  base.py  smtp.py
app/core/db/: base_model.py  convertor.py  event.py  exceptions.py  repository.py  session.py
app/core/di/: __init__.py  auth.py  broker.py  cache.py  container.py  core.py  db.py  events.py  mail.py  mediator.py  queues.py
app/figma/: README_PROJECT.md
app/new_chats/: config.py
app/notifications/: exceptions.py  providers.py  routers.py
app/profiles/: config.py  exceptions.py  providers.py  routers.py  tasks.py
app/projects/: config.py  exceptions.py  providers.py  routers.py  tasks.py
app/rooms/: config.py  exceptions.py  providers.py  routers.py
figma/: .env.example  .gitignore  GETTING_STARTED.md  README.md  index.html  package-lock.json  package.json
frontend/: .env.example  .env.production  .eslintrc.json  .gitignore  ARCHITECTURE_AUDIT.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/figma/: API_INTEGRATION.md  README_PROJECT.md  index.html
frontend/figma1/: API_INTEGRATION.md  API_README.md  API_USAGE.md  GETTING_STARTED.md  HOOKS_GENERATION.md  SECURITY.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx  middleware.ts  vite-env.d.ts
infra/livekit/: livekit.yaml
infra/postgres/: postgresql.conf
infra/turn/: turnserver.conf
migrations/: env.py
migrations/versions/: 0a8c6f043db1_.py  487c37c04f62_.py  5423d1c6d647_.py  650d9eef8a60_.py  796f268e71a5_.py  990439a633e3_.py  af2be2dbcc2b_.py  b72ed306e02e_.py  bcc3aa68b584_.py  ea6278e2c534_.py
monitoring/prometheus/: prometheus.yml
monitoring/vector/: vector.toml
nginx/: nginx.conf
nginx/sites-available/: api.conf  console.conf  grafana.conf  livekit.conf  storage.conf
nginx/snippets/: proxy.conf  security.conf  ssl.conf
tests/: conftest.py
tests/auth/: conftest.py
tests/chats/: conftest.py
tests/profiles/: conftest.py
tests/projects/: conftest.py
(+586 files in other folders)
