[project]
name = "social_gihub"
version = "0.1.0"
description = ""
authors = [
    {name = "Forgot-0",email = "mr.aisamutdin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiocache (==0.12.3)",
    "aiosmtplib (==4.0.1)",
    "alembic (==1.16.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "asyncpg (==0.30.0)",
    "click (==8.2.1)",
    "dishka (==1.6.0)",
    "dnspython (==2.7.0)",
    "ecdsa (==0.19.1)",
    "email-validator (==2.2.0)",
    "fastapi (==0.116.1)",
    "fastapi-limiter (==0.1.6)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "importlib-metadata (==8.7.0)",
    "izulu (==0.50.0)",
    "jinja2 (==3.1.6)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "orjson (==3.11.0)",
    "packaging (==25.0)",
    "passlib (==1.7.4)",
    "pyasn1 (==0.6.1)",
    "pycron (==3.2.0)",
    "pydantic (==2.11.7)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "pyjwt (==2.9.0)",
    "python-dotenv (==1.1.1)",
    "python-jose (==3.5.0)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.2)",
    "redis (==5.3.0)",
    "rsa (==4.9.1)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.47.2)",
    "structlog (==25.4.0)",
    "taskiq (==0.11.18)",
    "taskiq-dependencies (==1.5.7)",
    "taskiq-redis (==1.0.9)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "uvicorn (==0.35.0)",
    "zipp (==3.23.0)",
    "bcrypt (==3.2.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "minio (>=7.2.18,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
]

[dependency-groups]
test = [
    "pytest==8.3.*",
    "pytest-asyncio>=0.26.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.6.1",
    "testcontainers>=4.10.0",
]
lint = [
    "mypy==1.15.*",
    "ruff==0.9.*",
    "pylint==3.3.*",
]
dev = [
    { include-group = "test" },
    "pre-commit==4.5.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
